[package]
name = "tbamud-rwb"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "circle"
path = "src/main.rs"

[dependencies]
# Builds on Rust 1.85.  Requirements are semver-compatible (caret) bounds; the
# exact resolved versions are kept in Cargo.lock.  (These were previously hard-
# pinned with `=` for the old Rust 1.75 toolchain — no longer necessary.)
tokio  = { version = "1.35", features = ["full"] }
anyhow = "1.0"
bytes  = "1.5"
libc   = "0.2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand               = "0.8"
